# genai-demo

./: .env  Dockerfile  README.md  agent.py  app.py  pyproject.toml  requirements.txt
.github/workflows/: aquasec.yml  pyproject.toml
k8s/: network-policy.yml  openai-deployment.yml  openai-service.yml
